--- a/SingleViewAppSwiftTemplate/EventView.xib
+++ b/SingleViewAppSwiftTemplate/EventView.xib
@@ -29,24 +29,36 @@
                     <state key="normal">
                         <color key="titleColor" red="0.031372549020000001" green="0.16862745100000001" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="moveEventUpButtonTapped:" destination="-1" eventType="touchUpInside" id="mnL-m6-QB6"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pHT-dL-yZ9">
                     <rect key="frame" x="345" y="54" width="30" height="34"/>
                     <state key="normal">
                         <color key="titleColor" red="0.031372549020000001" green="0.16862745100000001" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="moveEventDownButtonTapped:" destination="-1" eventType="touchUpInside" id="NmX-QH-B8B"/>
+                    </connections>
                 </button>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="txL-LF-bqq">
                     <rect key="frame" x="345" y="20" width="30" height="34"/>
                     <state key="normal">
                         <color key="titleColor" red="0.031372549020000001" green="0.16862745100000001" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="moveEventUpButtonTapped:" destination="-1" eventType="touchUpInside" id="vjr-ts-ISe"/>
+                    </connections>
                 </button>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q75-4K-sVd">
                     <rect key="frame" x="345" y="20" width="30" height="34"/>
                     <state key="normal">
                         <color key="titleColor" red="0.031372549020000001" green="0.16862745100000001" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="moveEventDownButtonTapped:" destination="-1" eventType="touchUpInside" id="Pbm-Bs-Ro1"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gE4-Oj-Qhc">
                     <rect key="frame" x="16" y="8" width="57" height="651"/>
