--- a/SingleViewAppSwiftTemplate/Base.lproj/LaunchScreen.storyboard
+++ b/SingleViewAppSwiftTemplate/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,25 +14,22 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
-                        <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SplashScreenImage" translatesAutoresizingMaskIntoConstraints="NO" id="bCj-eN-ZnD">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="bCj-eN-ZnD" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="44I-EG-uDA"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="bCj-eN-ZnD" secondAttribute="bottom" id="87Q-sA-ns0"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="bCj-eN-ZnD" secondAttribute="trailing" constant="-16" id="CAW-Bh-yap"/>
-                            <constraint firstItem="bCj-eN-ZnD" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-16" id="vJ2-i2-CxZ"/>
+                            <constraint firstItem="bCj-eN-ZnD" firstAttribute="top" secondItem="vR4-nw-Zaz" secondAttribute="top" id="44I-EG-uDA"/>
+                            <constraint firstItem="vR4-nw-Zaz" firstAttribute="bottom" secondItem="bCj-eN-ZnD" secondAttribute="bottom" id="87Q-sA-ns0"/>
+                            <constraint firstItem="vR4-nw-Zaz" firstAttribute="trailing" secondItem="bCj-eN-ZnD" secondAttribute="trailing" id="CAW-Bh-yap"/>
+                            <constraint firstItem="bCj-eN-ZnD" firstAttribute="leading" secondItem="vR4-nw-Zaz" secondAttribute="leading" id="vJ2-i2-CxZ"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="vR4-nw-Zaz"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
